alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: cattle-monitoring-system
spec:
  tls:
    - hosts:
        - alertmanager.lucasnet.int
      secretName: lucasnet-tls
  rules:
    - host: alertmanager.lucasnet.int
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager-operated
                port:
                  number: 9093
